tests/fail/fail_must_yield_i32.tk
fn main() -> i32 {
    auto y: i32 = for auto x in [1] {
        // missing pass
    } or {
        // missing pass
    }
    return 0
}
